--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -7,12 +7,14 @@
   "driver_totals":"تقرير اجماليات الطيارين",
   "select_data" : "من فضلك املأ البيانات المطلوبة",
   "Show_Totals" : "إظهار الإجماليات",
+  
   "Acc_Stat": "كشف حساب",
   "Acc_Stat_desc": "هذا التقرير يتيح لك استخراج كشف حساب لكل انواع الحسابات",
   "sidebar" : {
     "products" : "الأصناف",
     "pos" : "تقارير نقاط البيع",
     "accounts" : "تقارير الحسابات",
+    "monthly_report" : "تقرير شهري",
     "items" : "تقارير الأصناف",
     "open_cashtray" : "الورديات المفتوحة",
     "drivertotals" : "إجماليات الطيارين",
