--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,6 +14,7 @@
   "sidebar" : {
     "products" : "Products",
     "pos" : "Point of sales",
+    "monthly_report" : "monthly report",
     "accounts" : "Accounts",
     "paused_cashtray" : "Paused Shifts",
     "reports":"reports",
