--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -140,6 +140,20 @@
 "delivery" : "منازل",
 "visa" : "فيزا",
 "discount" : "خصم",
+
+"bank" : "بنك",
+"DocDate" : "تاريخ المستند",
+"Customer" : "اسم العميل",
+"OtherIn" : "وارد اخري",
+"FromBank" : "وارد بنك",
+"Supplier" : "المورد",
+"Expenses" : "مصروفات",
+"OtherOut" : "منصرف اخري",
+"ToBank" : "منصرف بنك",
+"TotalDebit" : "اجمالي مدين",
+"TotalCredit" : "اجمالي دائن",
+
+"other" : "اخري",
 "payLater" : "بيع اجل",
 "deliveryNoneReturn" : "منازل بالخارج",
 "total" : "الاجمالي",
