update item image

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -7,13 +7,16 @@
   "driver_totals":"تقرير اجماليات الطيارين",
   "select_data" : "من فضلك املأ البيانات المطلوبة",
   "Show_Totals" : "إظهار الإجماليات",
-  
+  "edit_item_image" : "تعديل بيانات المنتج",
+  "store_settings" : "اعدادات المخزن",
+  "edit_items" : "اعدادات الاصناف",
   "Acc_Stat": "كشف حساب",
   "Acc_Stat_desc": "هذا التقرير يتيح لك استخراج كشف حساب لكل انواع الحسابات",
   "sidebar" : {
     "products" : "الأصناف",
     "pos" : "تقارير نقاط البيع",
     "accounts" : "تقارير الحسابات",
+    "settings" : "الاعدادات",
     "monthly_report" : "تقرير شهري",
     "items" : "تقارير الأصناف",
     "open_cashtray" : "الورديات المفتوحة",
